fix: hopefully fix a CME in region refresh checking